Fixing course page tab background in dark mode

--- a/University/Admin assets/CSS/build-uhi-main.css
+++ b/University/Admin assets/CSS/build-uhi-main.css
@@ -567,6 +567,8 @@ section coursedetails
     margin: 0px;
     padding-bottom: 0px;
     border-bottom: 0.5rem solid var(--uhi-blue);
+    color-scheme: only light;
+    background-color: transparent;
   }
 }
 
